--- a/index.html
+++ b/index.html
@@ -6,14 +6,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>debunk</title>
     <link rel="stylesheet" href="./navbar.css">
+    <link rel="stylesheet" href="./style.css">
 </head>
 <body>
   <div class="header">
     <a class="logo" href="#">Lady diana</a>
     <nav class="headerNav">
-      <a href="#" class="link">Accueil</a>
-      <a href="#" class="link">Théorie</a>
-      <a href="#" class="link">Explication</a>
+      <a href="#presentation" class="link">Presentation</a>
+      <a href="#theorie" class="link">Théorie</a>
+      <a href="#explication" class="link">Explication</a>
     </nav>
 
     <div class="mobile">
@@ -31,5 +32,33 @@
     </div>
   </div>
 
+  <div class="img_text">
+    <div class="img">
+      <img src="./img/image.jpg" alt="image">
+    </div>
+    <div class="text">
+      <div class="titre">
+        <h1>Lady Diana</h1>
+      </div>
+      <div class="date">
+        <p>1961-1997</p>
+      </div>
+    </div>
+  </div>
+
+  <div class="presentation" id="presentation">
+    <h2 class="h2">Presentation</h2>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur, esse doloremque ad magnam quasi, labore voluptatum perspiciatis atque expedita ullam voluptatibus earum accusamus harum commodi non deleniti adipisci dolor velit optio eum quibusdam, in exercitationem nostrum. Minus in tempora, doloremque non suscipit fugiat ab explicabo incidunt itaque. Nesciunt, iste eum?</p>
+  </div>
+
+  <div class="theorie" id="theorie">
+    <h2 class="h2">Théorie</h2>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus tempore commodi, aut, voluptas nisi dolores mollitia recusandae est harum in velit repellendus laudantium sapiente nam soluta quis quibusdam explicabo officia. Dolore, repellat accusantium. Obcaecati deleniti perferendis ipsum suscipit molestiae enim perspiciatis temporibus soluta laudantium voluptatum quidem inventore id maxime quia, quo animi dolorem. Officiis voluptatibus necessitatibus alias, nihil quos omnis?</p>
+  </div>
+
+  <div class="explication" id="explication">
+    <h2 class="h2">Explication</h2>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus tempore commodi, aut, voluptas nisi dolores mollitia recusandae est harum in velit repellendus laudantium sapiente nam soluta quis quibusdam explicabo officia. Dolore, repellat accusantium. Obcaecati deleniti perferendis ipsum suscipit molestiae enim perspiciatis temporibus soluta laudantium voluptatum quidem inventore id maxime quia, quo animi dolorem. Officiis voluptatibus necessitatibus alias, nihil quos omnis?</p>
+  </div>
 </body>
 </html>
