--- a/biographie.html
+++ b/biographie.html
@@ -1,25 +1,26 @@
 <!DOCTYPE html>
 <html lang="fr">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>debunk</title>
     <link rel="stylesheet" href="./navbar.css">
-    <link rel="stylesheet" href="./acceuil.css">
+    <link rel="stylesheet" href="./biographie.css">
     <link rel="stylesheet" href="./asset/aos/aos.css">
-    <link rel="stylesheet" href="hearder_footer.css">
-
+    <link rel="stylesheet" href="./hearder_footer.css">
 </head>
+
 <body>
   <div class="header">
-    <a class="logo" href="#">Lady diana</a>
+    <a class="logo" href="./index.html">Lady diana</a>
     <nav class="headerNav">
       <a href="./biographie.html" class="link">Biographie</a>
       <a href="#theorie" class="link">Théorie</a>
       <a href="#explication" class="link">Explication</a>
     </nav>
-
+    
     <div class="mobile">
       <label for="toggleNav" class="hamburger">
         <div class="hamburgerLine"></div>
@@ -28,62 +29,35 @@
       </label>
       <input type="checkbox" id="toggleNav" />
       <nav class="mobileNav">
-        <a href="#" class="link">Biographie</a>
+        <a href="./biographie.html" class="link">Biographie</a>
         <a href="#" class="link">Théorie</a>
         <a href="#" class="link">Explication</a>
       </nav>
     </div>
   </div>
-
-  <div class="img_text">
-    <div class="img">
-      <img class="img2" src="./img/image.jpg" alt="image">
-    </div>
-    <div class="text">
-      <div class="titre">
-        <h1>Lady Diana</h1>
-      </div>
-      <div class="date">
-        <p>1961-1997</p>
-      </div>
-    </div>
-  </div>
-
-  <div class="list">
-    <div class="mot1" 
-    class="aos-item" 
-    data-aos="zoom-out-up"
-    data-aos-offset="200"
-    data-aos-once="false"
-    >
-      <h2>Femme célèbre</h2>
-    </div>
-
-    <div class="mot2"
-    class="aos-item" 
-    data-aos="zoom-out-up"
-    data-aos-offset="200"
-    data-aos-once="false"
-    >
-      <h2>Une histoire qui passione le monde entier</h2>
-    </div>
-
-    <div class="mot3"
-    class="aos-item" 
-    data-aos="zoom-out-up"
-    data-aos-offset="200"
-    data-aos-once="false"
-    >
-      <h2>Mais qui la tuée?</h2>
-    </div>
-  </div>
   
+  <div class="vie_perso">
+    <h2>Vie Peronnel :</h2>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptas exercitationem, cum nam corporis in ipsa aliquam dolorem debitis iusto hic, mollitia aperiam, vel modi placeat! Dolorum sed praesentium nobis in adipisci. Placeat odit inventore, provident est quod facere odio debitis ea aliquid nobis dicta doloribus cumque. Unde vitae tempora labore?</p>
+  </div>
+
+  <div class="vie_mediatique">
+    <h2>Vie Médiatique :</h2>
+    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Omnis repellendus officiis, illo autem aut saepe maiores dolorem architecto esse commodi eveniet repudiandae tenetur hic tempore? Non, modi illo? Consequuntur non adipisci perferendis facere. Ullam, mollitia obcaecati sunt atque facilis quod quia, debitis ab nemo dolor repellendus, a molestiae odit dolorem.</p>
+  </div>
+
+  <div class="enterrement">
+    <h2>Funéraille :</h2>
+    <p></p>
+  </div>
+
+
   <footer class="footer">
     <div class="footer_left">
       <div class="logo">Lady Diana</div>
       <nav class="footer_nav">
         <ul>
-          <li><a href="#">Biographie</a></li>
+          <li><a href="./biographie.html">Biographie</a></li>
           <li>
             <a href="#">Théorie</a>
           </li>
@@ -94,7 +68,7 @@
 
     <div class="footer_center">
       <p>Clément Szewczyk</p>
-      <p>Niels-Andy Ella-Peke</p>
+      <p>Niels-Andy EllaPeke</p>
       <p>Lilly Hock-Koon</p>
       <p>Antonin Ledee</p>
     </div>
@@ -113,8 +87,6 @@
       <p style="padding-top:20px ;">Clément Szewczyk © 2022. Tous droits réservés.</p>
     </div>
   </footer>
-
-  <script src="./asset/aos/aos.js"></script>
-  <script src="./script.js"></script>
+    
 </body>
 </html>
