--- a/biographie.html
+++ b/biographie.html
@@ -84,7 +84,7 @@
         <a href="https://www.instagram.com/"><img src="./img/instagram.svg" /></a>
         <a href="https://twitter.com/"><img src="./img/twitter.svg" /></a>
       </div>
-      <p style="padding-top:20px ;">Clément Szewczyk © 2022. Tous droits réservés.</p>
+      <p style="padding-top:20px ;">Clément Szewczyk © 2022.</p>
     </div>
   </footer>
     
