--- a/index.html
+++ b/index.html
@@ -4,20 +4,20 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>debunk</title>
-    <link rel="stylesheet" href="./navbar.css">
+    <title>Lady Diana</title>
+    <link rel="stylesheet" href="./navbar&footer/navbar.css">
     <link rel="stylesheet" href="./acceuil.css">
     <link rel="stylesheet" href="./asset/aos/aos.css">
-    <link rel="stylesheet" href="hearder_footer.css">
+    <link rel="stylesheet" href="./navbar&footer/hearder_footer.css">
 
 </head>
 <body>
   <div class="header">
     <a class="logo" href="#">Lady diana</a>
     <nav class="headerNav">
-      <a href="./biographie.html" class="link">Biographie</a>
-      <a href="#theorie" class="link">Théorie</a>
-      <a href="#explication" class="link">Explication</a>
+      <a href="./page/biographie/biographie.html" class="link">Biographie</a>
+      <a href="./page/théorie/theorie.html" class="link">Théorie</a>
+      <a href="./page/explication/explication.html" class="link">Explication</a>
     </nav>
 
     <div class="mobile">
@@ -83,11 +83,11 @@
       <div class="logo">Lady Diana</div>
       <nav class="footer_nav">
         <ul>
-          <li><a href="#">Biographie</a></li>
+          <li><a href="./page/biographie/biographie.html">Biographie</a></li>
           <li>
-            <a href="#">Théorie</a>
+            <a href="./page/théorie/theorie.html">Théorie</a>
           </li>
-          <li><a href="#">Explication</a></li>
+          <li><a href="./page/explication/explication.html">Explication</a></li>
         </ul>
       </nav>
     </div>
