--- a/index.html
+++ b/index.html
@@ -28,9 +28,9 @@
       </label>
       <input type="checkbox" id="toggleNav" />
       <nav class="mobileNav">
-        <a href="#" class="link">Biographie</a>
-        <a href="#" class="link">Théorie</a>
-        <a href="#" class="link">Explication</a>
+        <a href="./page/biographie/biographie.html" class="link">Biographie</a>
+        <a href="./page/théorie/theorie.html" class="link">Théorie</a>
+        <a href="./page/explication/explication.html" class="link">Explication</a>
       </nav>
     </div>
   </div>
