--- a/navbar&footer/header_footer.html
+++ b/navbar&footer/header_footer.html
@@ -35,7 +35,7 @@
 
     <div class="img_text">
         <div class="img">
-          <img class="img2" src="./img/image.jpg" alt="image">
+          <img class="img2" src="../img/image.jpg" alt="image">
         </div>
         <div class="text">
           <div class="titre">
@@ -78,13 +78,13 @@
         <div class="footer_right">
           <nav>
             <a href="./index.html">
-             <img src="./img/diana2.jpg"  class="imgfooter" alt="">
+             <img src="../img/diana2.jpg"  class="imgfooter" alt="">
             </a>
           </nav>
           <div class="socials">
-            <a href="https://www.facebook.com/"><img src="./img/facebook.svg" /></a>
-            <a href="https://www.instagram.com/"><img src="./img/instagram.svg" /></a>
-            <a href="https://twitter.com/"><img src="./img/twitter.svg" /></a>
+            <a href="https://www.facebook.com/"><img src="../img/facebook.svg" /></a>
+            <a href="https://www.instagram.com/"><img src="../img/instagram.svg" /></a>
+            <a href="https://twitter.com/"><img src="../img/twitter.svg" /></a>
           </div>
           <p style="padding-top:20px ;">Clément Szewczyk © 2022. Tous droits réservés.</p>
         </div>
