--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <a class="logo" href="#">Lady diana</a>
     <nav class="headerNav">
       <a href="./page/biographie/biographie.html" class="link">Biographie</a>
-      <a href="./page/théorie/theorie.html" class="link">Théorie</a>
+      <a href="./page/théorie/theorie.html" class="link">Théories</a>
       <a href="./page/explication/explication.html" class="link">Explication</a>
     </nav>
 
@@ -29,7 +29,7 @@
       <input type="checkbox" id="toggleNav" />
       <nav class="mobileNav">
         <a href="./page/biographie/biographie.html" class="link">Biographie</a>
-        <a href="./page/théorie/theorie.html" class="link">Théorie</a>
+        <a href="./page/théorie/theorie.html" class="link">Théories</a>
         <a href="./page/explication/explication.html" class="link">Explication</a>
       </nav>
     </div>
@@ -85,7 +85,7 @@
         <ul>
           <li><a href="./page/biographie/biographie.html">Biographie</a></li>
           <li>
-            <a href="./page/théorie/theorie.html">Théorie</a>
+            <a href="./page/théorie/theorie.html">Théories</a>
           </li>
           <li><a href="./page/explication/explication.html">Explication</a></li>
         </ul>
