--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
     <a class="logo" href="#">Lady diana</a>
     <nav class="headerNav">
       <a href="./page/biographie/biographie.html" class="link">Biographie</a>
-      <a href="./page/théorie/theorie.html" class="link">Théories</a>
-      <a href="./page/explication/explication.html" class="link">Explication</a>
+      <a href="./page/théorie/theorie.html" class="link">Théorie</a>
+      <a href="./page/explication/explication.html" class="link">Analyse</a>
     </nav>
 
     <div class="mobile">
@@ -29,8 +29,8 @@
       <input type="checkbox" id="toggleNav" />
       <nav class="mobileNav">
         <a href="./page/biographie/biographie.html" class="link">Biographie</a>
-        <a href="./page/théorie/theorie.html" class="link">Théories</a>
-        <a href="./page/explication/explication.html" class="link">Explication</a>
+        <a href="./page/théorie/theorie.html" class="link">Théorie</a>
+        <a href="./page/explication/explication.html" class="link">Analyse</a>
       </nav>
     </div>
   </div>
@@ -85,9 +85,9 @@
         <ul>
           <li><a href="./page/biographie/biographie.html">Biographie</a></li>
           <li>
-            <a href="./page/théorie/theorie.html">Théories</a>
+            <a href="./page/théorie/theorie.html">Théorie</a>
           </li>
-          <li><a href="./page/explication/explication.html">Explication</a></li>
+          <li><a href="./page/explication/explication.html">Analyse</a></li>
         </ul>
       </nav>
     </div>
