--- a/index.html
+++ b/index.html
@@ -53,29 +53,66 @@
     <div class="mot1" 
     class="aos-item" 
     data-aos="zoom-out-up"
-    data-aos-offset="200"
+    data-aos-offset="50"
     data-aos-once="false"
     >
-      <h2>Femme célèbre</h2>
+      <h2>Une princesse de cœur et du peuple. </h2>
     </div>
 
     <div class="mot2"
     class="aos-item" 
     data-aos="zoom-out-up"
-    data-aos-offset="200"
+    data-aos-offset="50"
     data-aos-once="false"
     >
-      <h2>Une histoire qui passione le monde entier</h2>
+      <h2>Une figure pour la cause humanitaire. </h2>
     </div>
 
     <div class="mot3"
     class="aos-item" 
     data-aos="zoom-out-up"
-    data-aos-offset="200"
+    data-aos-offset="50"
     data-aos-once="false"
     >
-      <h2>Mais qui la tuée?</h2>
+      <h2>Une victime de son mariage. </h2>
     </div>
+
+    <div class="mot3"
+    class="aos-item" 
+    data-aos="zoom-out-up"
+    data-aos-offset="50"
+    data-aos-once="false"
+    >
+      <h2>Un rayon de soleil, source d’humanité dans la famille royale.  </h2>
+    </div>
+
+    <div class="mot3"
+    class="aos-item" 
+    data-aos="zoom-out-up"
+    data-aos-offset="50"
+    data-aos-once="false"
+    >
+      <h2>Une mère aimante et protectrice.  </h2>
+    </div>
+
+    <div class="mot3"
+    class="aos-item" 
+    data-aos="zoom-out-up"
+    data-aos-offset="50"
+    data-aos-once="false"
+    >
+      <h2> Une grande rêveuse.  </h2>
+    </div>
+
+    <div style="text-align: center ;" class="mot3"
+    class="aos-item" 
+    data-aos="zoom-out-up"
+    data-aos-offset="50"
+    data-aos-once="false"
+    >
+      <h2>“Je fais les choses différemment, parce que je ne respecte pas les règles, je dirige avec mon amour et non avec ma tête, et même si cela me cause des ennuis dans mon travail, je le comprends”  </h2>
+    </div>
+
   </div>
   
   <footer class="footer">
